# MICO_control_RPi

./: CMakeLists.txt  README.md  arm_control_joystick.cpp  arm_control_keyboard.cpp  ex_ctrl.cpp  ex_finger.cpp  ex_home.cpp  ex_joystick.cpp  ex_move_fb.cpp  ex_move_fblrud.cpp  ex_retract.cpp
